Update documentation. Relates to #57